# polyscope

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
examples/demo-app/: BUILD.bazel  demo_app.cpp
include/polyscope/: affine_remapper.ipp  combining_hash_functions.h  persistent_value.h  types.h
include/polyscope/render/opengl/: gl_engine.h
src/: group.cpp  messages.cpp  persistent_value.cpp  polyscope.cpp  slice_plane.cpp  view.cpp
src/render/: engine.cpp  ground_plane.cpp  managed_buffer.cpp
src/render/opengl/: gl_engine.cpp
