package(default_visibility = ["//visibility:public"])

cc_library(
    name = "polyscope",
    srcs = glob(
        ["src/**/*.cpp"],
    ),
    hdrs = glob(
        [
            "include/**/*.h",
            "include/**/*.ipp",
        ],
    ),
    strip_include_prefix = "include",
    deps = [
        "//deps/json",
        "//deps/stb",
        "//deps/MarchingCubeCpp:marching_cube",
        "@imgui",
        "@glm",
    ],
    defines = [
      #  "POLYSCOPE_BACKEND_OPENGL3_GLFW",
    ]
)
