bazel_dep(name = "apple_support", version = "1.18.0")
bazel_dep(name = "glfw", version = "3.3.9")
bazel_dep(name = "glm", version = "0.9.9.8.bcr.1")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
# bazel_dep(name = "imgui", version = "1.91.8")
bazel_dep(name = "nlohmann_json", version = "3.11.2")
